<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".explorationscreen.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/spaceImagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/divider"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:itemCount="10"
        tools:listitem="@layout/item_gallery_view_holder" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/spaceImagesRecyclerView">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:layout_scrollFlags="scroll|snap"
            app:titleEnabled="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="1dp"
                android:gravity="end"
                android:outlineProvider="none"
                app:layout_collapseMode="pin"
                app:logo="@drawable/ic_rocket" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            app:boxBackgroundColor="@color/searchBackgroundOverlay"
            app:boxStrokeColor="@android:color/white"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_collapseMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="true"
                android:drawableStart="@drawable/ic_search_white_24dp"
                android:drawablePadding="4dp"
                android:hint="@string/search_prompt"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/drawable_white_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/layout_error_state" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>